--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -40,4 +44,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.21'
     kapt "com.google.dagger:dagger-compiler:2.21"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
+    kapt "com.android.databinding:compiler:3.5.3"
 }
