--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,8 @@ dependencies {
     api 'io.reactivex.rxjava2:rxjava:2.1.9'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'com.facebook.fresco:fresco:2.0.0'
+
+    implementation 'com.google.android:flexbox:2.0.0'
 }
