--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,29 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'com.google.gms.google-services'
+
+// Create a variable called keystorePropertiesFile, and initialize it to your
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file("keys/keystore.properties")
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore.properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
+
+    signingConfigs {
+        config {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile rootProject.file("keys/android.jks")
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
@@ -67,4 +89,6 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:2.0.0'
 
     implementation 'com.google.android:flexbox:2.0.0'
+
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
 }
