--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.0'
 
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+
+    implementation 'androidx.browser:browser:1.0.0'
 }
