--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
 
     implementation 'androidx.browser:browser:1.0.0'
+
+    implementation 'com.airbnb.android:lottie:3.3.1'
 }
